# bbs-rs

./: .bbs.toml.swp  .gitignore  Cargo.toml  LICENSE  README.md  bbs.toml.bak  justfile
.github/workflows/: ci.yml  release.yml
art/: welcome-test.ans  welcome.ans  welcome.example.txt
docs/: FEDERATION-SETUP.md  FEDERATION.md  ROADMAP.md
doors/: README.md
doors/doorkit/: Cargo.toml
doors/doorkit/src/: lib.rs  session.rs  term.rs
doors/loid/: Cargo.toml
doors/loid/src/: content.rs  main.rs  player.rs
migrations/: 0001_init.sql  0002_admin_bans_logins.sql  0003_bulletins.sql  0004_ip_ban_expiry.sql  0005_oneliners.sql  0006_board_moderation.sql  0007_user_keys.sql  0008_file_areas.sql  0009_message_threads.sql  0010_user_board_seen.sql  0011_user_profiles.sql  0012_message_search.sql  0013_activitypub.sql  0014_ap_timeline.sql  0015_mail_ap_id.sql  0016_ap_board_posts.sql  0017_mirror_author_uri.sql  0018_ap_moderation.sql  0019_actor_kind.sql  0020_ap_outbox_posts.sql  0021_mirror_replies.sql  0022_outbox_replies.sql  0023_message_edited.sql  0024_broadcasts.sql  0025_audit_log.sql  0026_user_blocks.sql  0027_mail_search.sql  0028_finger_optout.sql  0029_message_reactions.sql  0030_polls.sql  0031_user_validation.sql  0032_user_time.sql  0033_password_reset.sql
src/: config.rs  error.rs  input.rs  lib.rs  main.rs  reload.rs  template.rs  util.rs
src/app/: ansi.rs  door.rs  mod.rs  state.rs  textarea.rs  theme.rs  ui.rs
src/cfg/: doc.rs  editor.rs  mod.rs  schema.rs  seed.rs
src/db/: mod.rs  models.rs
src/services/: admin.rs  archive.rs  audit.rs  auth.rs  blocks.rs  boards.rs  bulletins.rs  federation.rs  files.rs  finger.rs  keys.rs  mail.rs  mod.rs  oneliners.rs  polls.rs  presence.rs  profiles.rs  reactions.rs  search.rs  stats.rs  timelimit.rs
src/ssh/: mod.rs  pubkey.rs  server.rs  sftp.rs  terminal.rs
src/transport/: mod.rs
src/web/: activitypub.rs  ap_object.rs  mod.rs  terminal.rs  tls.rs
src/web/static/: index.html
tests/: admin.rs  app_menu.rs  archive.rs  art_variants.rs  audit.rs  broadcast.rs  cfg.rs  chat.rs  compose.rs  door.rs  edit_delete.rs  fed_moderation.rs  federation.rs  finger.rs  ignore.rs  mail_search.rs  mail_sysop.rs  menu.rs  menu_canvas.rs  migrate.rs  paging.rs  password_reset.rs  polls.rs  reactions.rs  services.rs  templates.rs  theme_render.rs  time_limits.rs  validation.rs  web.rs
