[package]
name = "loid"
version = "0.1.0"
edition = "2024"
description = "Legend of the Indigo Dragon — a small LORD-inspired BBS door game, built on doorkit."
license = "MIT"

[dependencies]
doorkit = { path = "../doorkit" }
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
